fixed layout issues in summary container

--- a/production.css
+++ b/production.css
@@ -2202,9 +2202,6 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
-.duration-300 {
-  transition-duration: 300ms;
-}
 .ease-in {
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
@@ -2671,4 +2668,3 @@ button:hover {
     padding: 0px;
   }
 }
-  
